feature: Добавил создание нового типа услуги
